samples/_failures_safe/1761322463_c199b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_478a992b.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_478a992b.c:161:9: error: expected identifier at end of input
  161 |         token->
      |         ^~~~~
./samples/SAFE/__tmp_478a992b.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_478a992b.c:161:9: error: expected declaration or statement at end of input
